--- a/index.html
+++ b/index.html
@@ -7,12 +7,34 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Fraunces:wght@500;600;700&family=Sora:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <style>
       body {
-        font-family: 'Inter', sans-serif;
-        background-color: #f3f4f6; /* gray-100 */
+        font-family: 'Sora', sans-serif;
+        background-color: #f6f3ee;
       }
+      .font-display {
+        font-family: 'Fraunces', serif;
+      }
+      @keyframes fadeUp {
+        from {
+          opacity: 0;
+          transform: translateY(8px);
+        }
+        to {
+          opacity: 1;
+          transform: translateY(0);
+        }
+      }
+      .fade-up {
+        animation: fadeUp 700ms ease both;
+      }
+      .fade-up-delay-1 { animation-delay: 80ms; }
+      .fade-up-delay-2 { animation-delay: 160ms; }
+      .fade-up-delay-3 { animation-delay: 240ms; }
+      .fade-up-delay-4 { animation-delay: 320ms; }
+      .fade-up-delay-5 { animation-delay: 400ms; }
+      .fade-up-delay-6 { animation-delay: 480ms; }
       /* Hide scrollbar for Chrome, Safari and Opera */
       .no-scrollbar::-webkit-scrollbar {
           display: none;
